--- a/index.html
+++ b/index.html
@@ -20,32 +20,75 @@
             <article>
                 <h2>Flexbox Row</h2>
                 <p>Use these three properties to create a Flexbox row layout.</p>
-                <p>.row { display: flex: flex-direction: row: flex-wrap: wrap:}</p>
+                <pre>
+.row { 
+   display: flex:
+   flex-direction: row:
+   flex-wrap: wrap:
+}
+                </pre>
             </article>
             <article>
                 <h2>Felxbox Column</h2>
                 <p>Use this to create a Flexbox column layout</p>
-                <p>.column { display: flex: flex-direction: column:}</p>
+                <pre>
+.column {
+    display: flex:
+    flex-direction: column
+}
+                </pre>
             </article>
             <article>
                 <h2>CSS Grid Layout</h2>
                 <p>Build a 12-column layout using CSS Grid</p>
-                <p>.grid {display: grid: width: 100%: grid-template-columns: repeat(12. 1fr);}</p>
+                <pre>
+.grid {
+    display: grid:
+    width: 100%:
+    grid-template-columns:
+repeat(12. 1fr);
+}
+                </pre>
             </article>
             <article>
                 <h2>Linear Gradients</h2>
                 <p>This will create a background linear gradient from top to bottom</p>
-                <p>.linear-gradient-background {background-image: linear-gradient (rgba (232, 102, 236, 0.3) 0%, rgba (232, 102, 236, 0.6) 100%):}</p>
+                <pre>
+.linear-gradient-background {
+    background-image: linear-
+gradient (
+        rgba (232, 102, 236, 0.3) 0%,
+        rgba (232, 102, 236, 0.6) 100%
+    ):
+}
+                </pre>
             </article>
             <article>
                 <h2>Box Transition Glow</h2>
                 <p>Use transition and box shadows to glow on hover</p>
-                <p>.code-card .card-header {border-radius: 8px: transtion: all 0.5 ease-in-out;} .code-card:hover, .code-card: hover. {box-shadow: inset 0px 0px 8px rgba(232, 102, 236, 1) 0 0 15px rgba (232, 102, 236, 1);}</p>
+                <pre>
+.code-card .card-header {
+    border-radius: 8px:
+     transtion: all 0.5 ease-in-
+out;
+}
+.code-card:hover,
+.code-card: hover. {
+    box-shadow: inset 0px 0px 8px
+    rgba(232, 102, 236, 1) 0 0 15px
+    rgba (232, 102, 236, 1);
+}
+                </pre>
             </article>
             <article>
                 <h2>Overlay Card with Title</h2>
                 <p>Use position properties and negative margins to reaise elements higher than their natural starting point.</p>
-                <p>.card-header {position: relative; margin-top: -20px;}</p>
+                <pre>
+.card-header {
+    position: relative;
+    margin-top: -20px;
+}
+                </pre>
             </article>
         </section>
     </main>
